# wheele

./: LICENSE  README.md  TODO.md  desktop_install_bash_history.txt  robot_install_bash_history.txt  wheele_ros_cmds.md
.github/workflows/: kinetic-build.yaml
REF_ros_botboard/include/: BotBoard.hpp
REF_ros_botboard/src/: BotBoard.cpp  CMakeLists.txt  main.cpp
avoid_obstacles/: CMakeLists.txt  LICENSE  package.xml
avoid_obstacles/config/: view_costmap.rviz
avoid_obstacles/include/avoid_obstacles/: NavStates.h
avoid_obstacles/launch/: avoid_obstacles.launch  nav_states_master.launch
avoid_obstacles/scripts/: get_repel.m  get_repel2.m  test_potential_fields.m  waypoints_manager.py
avoid_obstacles/src/: Astar.cpp  Astar.h  AvoidObs.cpp  AvoidObs.h  AvoidObsCommon.h  NavStates.cpp  NavStates.h  PotentialFields.cpp  PotentialFields.h
basic_pose/: CMakeLists.txt  package.xml
basic_pose/include/basic_pose/: PubOdom.hpp
basic_pose/src/: PubOdom.cpp
can2ros_wheele/: CMakeLists.txt  package.xml
can2ros_wheele/include/can2ros/: Can2Ros.h  Can2Ros.hpp
can2ros_wheele/launch/: wheele_sim.launch
can2ros_wheele/scripts/: can2ros.py  sim_wheele.py
can2ros_wheele/src/: Can2Ros.cpp
compass_can/: CMakeLists.txt  package.xml
compass_can/include/compass_can_lib/: CompassCAN.h
compass_can/src/: CompassCAN.cpp
cone_finder/: CMakeLists.txt  package.xml
cone_finder/cfg/: Cone.cfg
cone_finder/launch/: cone_finder.launch  cone_finder_offboard.launch  dnn_detect.launch  train_cone_coords.launch
cone_finder/scripts/: cone_coordinates.py  cone_finder.py  cone_finder_reconfig.py  cone_histograms.py  cone_pose_trainer.py  hsv_filt.py  reconfig_cone_finder.py
documentation/: CAN Protocol for Wheele.docx  wheele_ROS_notes.md
imu_can/: CMakeLists.txt  package.xml
imu_can/include/imu_can_lib/: ImuCAN.h
imu_can/src/: ImuCAN.cpp
ros_micromaestro/: CMakeLists.txt  README.md  contributors.txt  package.xml
ros_micromaestro/include/lib/: MicroMaestro.hpp  Servo.hpp
ros_micromaestro/src/: CMakeLists.txt  MicroMaestro.cpp  RPMSerialInterface.cpp  RPMSerialInterfacePOSIX.cpp  Servo.cpp  main.cpp
ros_micromaestro/symlink-mm/: 10-MicroMaestro.rules  Readme.md  install.sh  kMicroMaestro.rules  reload.sh
ros_vehicle_model/: CMakeLists.txt  package.xml
ros_vehicle_model/include/ros_vehicle_model/: ROS2CAN.h  VehicleModel.hpp
ros_vehicle_model/include/vehicle_model_lib/: VehicleModel.hpp
ros_vehicle_model/launch/: camera_test.launch  just_can.launch  test_wheele.launch  view_bag.launch  wheele_ekf_test.launch  wheele_master.launch  wheele_master_basic.launch  wheele_master_with_map.launch
ros_vehicle_model/params/params/: ekf_template.yaml
ros_vehicle_model/scripts/: DiffDriveController.py  conv_cmd_vel.py  wheele_bag_inputs_to_csv.py  wheele_local_planner.py  wheele_local_planner_sim.py
ros_vehicle_model/src/: ROS2CAN.cpp  ROS2CAN.h  VehicleModel.cpp  main.cpp
system/: install_startup_scripts.sh  roscore.service  roslaunch_wheele  wheele.service
wheele_msgs/: CMakeLists.txt  package.xml
wheele_msgs/msg/: Encoder.msg  SpeedCurve.msg  ThrustSteer.msg
