<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>basic_pose</name>
  <version>0.1.0</version>
  <description>The basic_pose package</description>
  <maintainer email="circ@example.com">CIRC</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/centralillinoisroboticsclub/wheele</url>
  <author>coderkarl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>wheele_msgs</depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
</package>
