<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cone_finder</name>
  <version>0.1.0</version>
  <description>Find a Cone</description>
  <maintainer email="circ@example.com">CIRC</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/centralillinoisroboticsclub/wheele</url>
  <author>coderkarl</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
</package>
