<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>imu_can</name>
  <version>0.1.0</version>
  <description>The imu_can package</description>
  <maintainer email="circ@example.com">CIRC</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/centralillinoisroboticsclub/wheele</url>
  <author>coderkarl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>can_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
