<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>wheele_msgs</name>
  <version>0.1.0</version>
  <description>The wheele_msgs package</description>
  <maintainer email="circ@example.com">CIRC</maintainer>
  <license>BSD</license>

  <url type="repository">https://github.com/centralillinoisroboticsclub/wheele</url>
  <author>coderkarl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
